--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
 /.vagrant/
 /datomic-license.sh
 /tmp/*
+/pom.xml
+*jar
+/lib
+/classes
+/native
+/.lein-failures
+/checkouts
+/.lein-deps-sum
+/.lein-plugins/*
+/target/*
+.lein*
